# TinyChatEngine

./: .gitignore
llm/: CMakeLists.txt
llm/application/: CMakeLists.txt  chat.cc  chat_demo.cc
llm/src/ops/: Gelu.cc
llm/tests/: CMakeLists.txt
